feature: support EnumFrom proceduce macro

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,18 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[lib]
+proc-macro = true
+
+[dev-dependencies]
 anyhow = "1.0.93"
 futures = { version = "0.3.31" }
 tokio = { version = "1.42.0", features = ["rt", "macros", "rt-multi-thread"] }
+
+[dependencies]
+#proc-macro2 = "1.0.92"
+#quote = "1.0.37"
+#syn = { version = "2.0.90", features = ["extra-traits"] }
+proc-macro2 = "1.0.79"
+quote = "1.0.35"
+syn = { version = "2.0.57", features = ["extra-traits"] }
