--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ futures = { version = "0.3.31" }
 tokio = { version = "1.42.0", features = ["rt", "macros", "rt-multi-thread"] }
 
 [dependencies]
+darling = "0.20.10"
 #proc-macro2 = "1.0.92"
 #quote = "1.0.37"
 #syn = { version = "2.0.90", features = ["extra-traits"] }
